BorrowLenses_PartialSandbox/src/objects/Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Private Attachments</relationshipLabel>
        <relationshipName>Private_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Latest_Attachment_Uploaded_Date_Time__c</fullName>
        <inlineHelpText>Holds the created date/time of the recently uploaded attachment.</inlineHelpText>
        <label>Latest Attachment Uploaded Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Attachments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds the number of attachments related to this.</description>
        <label>Number of Attachments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Private Attachment</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Private Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>